@@ -1,3 +1,7 @@
+2003-02-28  Bill Bumgarner  <bbum@codefab.com>
+    * Lib/AppKit/__init__.py: Added three (void) methods to
+    NSTableViewDelegate and added NSOutlineViewDelegate.
+
 2003-02-27  Bill Bumgarner  <bbum@codefab.com>
     * Lib/AppKit/__init__.py (NSTableViewDelegate): Added NSTableViewDelegate
       declaration and updated TableModel2 example.
